# CliquesRS

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bron_kerbosch.rs
data/: graph.txt  minimal.txt  small.txt
src/: lib.rs  main.rs
src/bron_kerbosch/: mod.rs
src/bron_kerbosch/types/: aliases.rs  cliques_report.rs  graph.rs  mod.rs  options.rs
tests/: bron_kerbosch.rs
