[package]
name = "cliques-rs"
version = "0.18.1"
authors = ["Hugo Cousin <hc73@hw.ac.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Heychsea/CliquesRS"
default-run = "cliques-rs"
autobenches = false
autobins = false

[features]
default = ["mimalloc", "rustc-hash", "csv", "rayon", "pool"]
pool = ["threadpool", "crossbeam-channel", "num_cpus"]

[dependencies]
rayon = { version = "^1.3.0", optional = true }
csv = { version = "^1.1.3", optional = true }
rustc-hash = { version ="^1.1.0", optional = true }
mimalloc = { version = "^0.1.19", default-features = false, optional = true }
clap = { version = "^3.0.0-beta.1", default-features = false, features = [ "std", "cargo" ] }
threadpool = { version = "^1.8.1", optional = true }
crossbeam-channel = { version = "^0.4.2", optional = true }
num_cpus = { version = "^1.13.0", optional = true }
mpi = { version = "^0.5.4", optional = true }

[dev-dependencies]
criterion = "^0.3.2"

[profile.dev]
debug = true
opt-level = 2

[[bin]]
name = "mpi"
test = false
harness = false
bench = false
required-features = [ "mpi" ]

[[bin]]
name = "cliques-rs"
harness = false
bench = false
test = false

[lib]
bench = false
test = false

[[bench]]
name = "bron_kerbosch"
harness = false