[package]
name = "cliques-rs"
version = "0.18.2"
authors = ["Hugo Cousin <hc73@hw.ac.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Heychsea/CliquesRS"
default-run = "cliques-rs"
autobenches = false
autobins = false

[features]
default = ["fxhash", "csv", "rayon", "pool"]
pool = ["threadpool", "crossbeam-channel", "num_cpus"]
fxhash = ["rustc-hash"]

[dependencies]
rayon = { version = "^1.5.1", optional = true }
csv = { version = "^1.1.6", optional = true }
rustc-hash = { version ="^1.1.0", optional = true }
mimalloc = { version = "^0.1.25", default-features = false, optional = true }
jemallocator = { version = "^0.3.2", optional = true }
clap = { version = "^3.0.5", default-features = false, features = [ "std", "cargo" ] }
threadpool = { version = "^1.8.1", optional = true }
crossbeam-channel = { version = "^0.5.2", optional = true }
num_cpus = { version = "^1.13.1", optional = true }
mpi = { version = "^0.5.4", optional = true }

[dev-dependencies]
criterion = "^0.3.3"

[profile.dev.package."cliques-rs"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "mpi"
test = false
harness = false
bench = false
required-features = [ "mpi" ]

[[bin]]
name = "cliques-rs"
harness = false
bench = false
test = false

[lib]
bench = false
test = false

[[bench]]
name = "bron_kerbosch"
harness = false
